--- a/requirements.txt
+++ b/requirements.txt
@@ -8,11 +8,12 @@ django-filter==2.4.0
 easypdf==1.0
 future==0.18.2
 html5lib==1.1
-Pillow==8.1.2
+Pillow
 PyPDF2==1.26.0
 python-bidi==0.4.2
 pytz==2021.1
-reportlab==3.5.63
+reportlab
 six==1.15.0
 sqlparse==0.4.1
 xhtml2pdf==0.2.5
+psycopg2== 2.9.3
