--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,9 @@ six==1.15.0
 sqlparse==0.4.1
 webencodings==0.5.1
 xhtml2pdf==0.2.5
+
+django-solo~=2.0.0
+pip~=21.1.2
+wheel~=0.36.2
+psycopg2~=2.9.3
+setuptools~=57.0.0
